cspm/cspm-platform/services/inventory-collector/output/588989875114/ap-south-1/ec2_3/describe_security_groups/describe_security_groups_output_20250603_143745.json
{
  "SecurityGroups": [
    {
      "GroupId": "sg-05850e759ba758b09",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-0f01f92b214c2db02",
      "SecurityGroupArn": "arn:aws:ec2:ap-south-1:588989875114:security-group/sg-05850e759ba758b09",
      "OwnerId": "588989875114",
      "GroupName": "AWS-OpsWorks-Memcached-Server",
      "Description": "AWS OpsWorks Memcached server - do not change or delete",
      "IpPermissions": [
        {
          "IpProtocol": "tcp",
          "FromPort": 22,
          "ToPort": 22,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "udp",
          "FromPort": 1,
          "ToPort": 65535,
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-0103db4f573a4ed4f"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-013a8747ab8a93f18"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-036c6bcb0296565b8"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-051b8e9a5d46fe530"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-08f7b525003bb7e20"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-0ccd4ebf312b802a1"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 1,
          "ToPort": 65535,
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-0103db4f573a4ed4f"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-013a8747ab8a93f18"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-036c6bcb0296565b8"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-051b8e9a5d46fe530"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-08f7b525003bb7e20"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-0ccd4ebf312b802a1"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "icmp",
          "FromPort": -1,
          "ToPort": -1,
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-0103db4f573a4ed4f"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-013a8747ab8a93f18"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-036c6bcb0296565b8"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-051b8e9a5d46fe530"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-08f7b525003bb7e20"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-0ccd4ebf312b802a1"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-0ccd4ebf312b802a1",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-0f01f92b214c2db02",
      "SecurityGroupArn": "arn:aws:ec2:ap-south-1:588989875114:security-group/sg-0ccd4ebf312b802a1",
      "OwnerId": "588989875114",
      "GroupName": "AWS-OpsWorks-Custom-Server",
      "Description": "AWS OpsWorks custom server - do not change or delete",
      "IpPermissions": [
        {
          "IpProtocol": "tcp",
          "FromPort": 80,
          "ToPort": 80,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 22,
          "ToPort": 22,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "udp",
          "FromPort": 1,
          "ToPort": 65535,
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-0103db4f573a4ed4f"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-013a8747ab8a93f18"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-036c6bcb0296565b8"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-03ff0022f8e89d55d"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-051b8e9a5d46fe530"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-08f7b525003bb7e20"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-0ccd4ebf312b802a1"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 1,
          "ToPort": 65535,
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-0103db4f573a4ed4f"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-013a8747ab8a93f18"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-036c6bcb0296565b8"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-03ff0022f8e89d55d"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-051b8e9a5d46fe530"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-08f7b525003bb7e20"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-0ccd4ebf312b802a1"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "icmp",
          "FromPort": -1,
          "ToPort": -1,
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-0103db4f573a4ed4f"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-013a8747ab8a93f18"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-036c6bcb0296565b8"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-03ff0022f8e89d55d"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-051b8e9a5d46fe530"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-08f7b525003bb7e20"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-0ccd4ebf312b802a1"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 443,
          "ToPort": 443,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-003764b9102fdcabc",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "udp",
          "FromPort": 53,
          "ToPort": 53,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 53,
          "ToPort": 53,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [
            {
              "CidrIpv6": "::/0"
            }
          ],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-0f01f92b214c2db02",
      "SecurityGroupArn": "arn:aws:ec2:ap-south-1:588989875114:security-group/sg-003764b9102fdcabc",
      "OwnerId": "588989875114",
      "GroupName": "launch-wizard-1",
      "Description": "launch-wizard-1 created 2018-09-05T19:43:17.053+05:30",
      "IpPermissions": [
        {
          "IpProtocol": "tcp",
          "FromPort": 80,
          "ToPort": 80,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [
            {
              "CidrIpv6": "::/0"
            }
          ],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "udp",
          "FromPort": 53,
          "ToPort": 53,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "Description": "DNS UDP",
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 53,
          "ToPort": 53,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "Description": "DNS TCP",
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 3389,
          "ToPort": 3389,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "Description": "RDP",
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [
            {
              "Description": "RDP",
              "CidrIpv6": "::/0"
            }
          ],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "icmp",
          "FromPort": -1,
          "ToPort": -1,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "Description": "ICMP",
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-08f7b525003bb7e20",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-0f01f92b214c2db02",
      "SecurityGroupArn": "arn:aws:ec2:ap-south-1:588989875114:security-group/sg-08f7b525003bb7e20",
      "OwnerId": "588989875114",
      "GroupName": "AWS-OpsWorks-PHP-App-Server",
      "Description": "AWS OpsWorks PHP-App server - do not change or delete",
      "IpPermissions": [
        {
          "IpProtocol": "tcp",
          "FromPort": 80,
          "ToPort": 80,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 22,
          "ToPort": 22,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "udp",
          "FromPort": 1,
          "ToPort": 65535,
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-03ff0022f8e89d55d"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-051b8e9a5d46fe530"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 1,
          "ToPort": 65535,
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-03ff0022f8e89d55d"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-051b8e9a5d46fe530"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "icmp",
          "FromPort": -1,
          "ToPort": -1,
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-03ff0022f8e89d55d"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-051b8e9a5d46fe530"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 443,
          "ToPort": 443,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-051b8e9a5d46fe530",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-0f01f92b214c2db02",
      "SecurityGroupArn": "arn:aws:ec2:ap-south-1:588989875114:security-group/sg-051b8e9a5d46fe530",
      "OwnerId": "588989875114",
      "GroupName": "AWS-OpsWorks-Web-Server",
      "Description": "AWS OpsWorks Web server - do not change or delete",
      "IpPermissions": [
        {
          "IpProtocol": "tcp",
          "FromPort": 80,
          "ToPort": 80,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 22,
          "ToPort": 22,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "udp",
          "FromPort": 1,
          "ToPort": 65535,
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-03ff0022f8e89d55d"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 1,
          "ToPort": 65535,
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-03ff0022f8e89d55d"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "icmp",
          "FromPort": -1,
          "ToPort": -1,
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-03ff0022f8e89d55d"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 443,
          "ToPort": 443,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-0834a20f1b5d98e75",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-0f01f92b214c2db02",
      "SecurityGroupArn": "arn:aws:ec2:ap-south-1:588989875114:security-group/sg-0834a20f1b5d98e75",
      "OwnerId": "588989875114",
      "GroupName": "AWS-OpsWorks-Monitoring-Master-Server",
      "Description": "AWS OpsWorks Monitoring Ganglia server - do not change or delete",
      "IpPermissions": [
        {
          "IpProtocol": "tcp",
          "FromPort": 80,
          "ToPort": 80,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 22,
          "ToPort": 22,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "udp",
          "FromPort": 1,
          "ToPort": 65535,
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-0103db4f573a4ed4f"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-013a8747ab8a93f18"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-036c6bcb0296565b8"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-03ff0022f8e89d55d"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-051b8e9a5d46fe530"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-05850e759ba758b09"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-05d51aaf81e62637a"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-08f7b525003bb7e20"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-0b973d414a6af6b00"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-0ccd4ebf312b802a1"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 1,
          "ToPort": 65535,
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-0103db4f573a4ed4f"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-013a8747ab8a93f18"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-036c6bcb0296565b8"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-03ff0022f8e89d55d"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-051b8e9a5d46fe530"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-05850e759ba758b09"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-05d51aaf81e62637a"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-08f7b525003bb7e20"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-0b973d414a6af6b00"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-0ccd4ebf312b802a1"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "icmp",
          "FromPort": -1,
          "ToPort": -1,
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-0103db4f573a4ed4f"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-013a8747ab8a93f18"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-036c6bcb0296565b8"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-03ff0022f8e89d55d"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-051b8e9a5d46fe530"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-05850e759ba758b09"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-05d51aaf81e62637a"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-08f7b525003bb7e20"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-0b973d414a6af6b00"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-0ccd4ebf312b802a1"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 443,
          "ToPort": 443,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-0a42b612018b2136a",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-0f01f92b214c2db02",
      "SecurityGroupArn": "arn:aws:ec2:ap-south-1:588989875114:security-group/sg-0a42b612018b2136a",
      "OwnerId": "588989875114",
      "GroupName": "LAMP Stack PHP 5-3 LTS-170503apache2232mysqld5555php5329-AutogenByAWSMP-",
      "Description": "This security group was generated by AWS Marketplace and is based on recommended settings for LAMP Stack PHP 5.3 LTS version 170503apache2232mysqld5555php5329 provided by Jetware",
      "IpPermissions": [
        {
          "IpProtocol": "tcp",
          "FromPort": 80,
          "ToPort": 80,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 22,
          "ToPort": 22,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-0ebaedacff0b32583",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-0f01f92b214c2db02",
      "SecurityGroupArn": "arn:aws:ec2:ap-south-1:588989875114:security-group/sg-0ebaedacff0b32583",
      "OwnerId": "588989875114",
      "GroupName": "AWS-OpsWorks-AWS-Flow-Ruby-Server",
      "Description": "AWS Flow Ruby server - do not change or delete",
      "IpPermissions": [
        {
          "IpProtocol": "tcp",
          "FromPort": 80,
          "ToPort": 80,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 22,
          "ToPort": 22,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "udp",
          "FromPort": 1,
          "ToPort": 65535,
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-03ff0022f8e89d55d"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-051b8e9a5d46fe530"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 1,
          "ToPort": 65535,
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-03ff0022f8e89d55d"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-051b8e9a5d46fe530"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "icmp",
          "FromPort": -1,
          "ToPort": -1,
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-03ff0022f8e89d55d"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-051b8e9a5d46fe530"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 443,
          "ToPort": 443,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-0b973d414a6af6b00",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-0f01f92b214c2db02",
      "SecurityGroupArn": "arn:aws:ec2:ap-south-1:588989875114:security-group/sg-0b973d414a6af6b00",
      "OwnerId": "588989875114",
      "GroupName": "AWS-OpsWorks-Default-Server",
      "Description": "AWS OpsWorks Default server - do not change or delete",
      "IpPermissions": [
        {
          "IpProtocol": "tcp",
          "FromPort": 22,
          "ToPort": 22,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-036c6bcb0296565b8",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-0f01f92b214c2db02",
      "SecurityGroupArn": "arn:aws:ec2:ap-south-1:588989875114:security-group/sg-036c6bcb0296565b8",
      "OwnerId": "588989875114",
      "GroupName": "AWS-OpsWorks-Java-App-Server",
      "Description": "AWS OpsWorks Java-App server - do not change or delete",
      "IpPermissions": [
        {
          "IpProtocol": "tcp",
          "FromPort": 80,
          "ToPort": 80,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 22,
          "ToPort": 22,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "udp",
          "FromPort": 1,
          "ToPort": 65535,
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-03ff0022f8e89d55d"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-051b8e9a5d46fe530"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 1,
          "ToPort": 65535,
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-03ff0022f8e89d55d"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-051b8e9a5d46fe530"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "icmp",
          "FromPort": -1,
          "ToPort": -1,
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-03ff0022f8e89d55d"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-051b8e9a5d46fe530"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 443,
          "ToPort": 443,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-0985511bb870df183",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-0f01f92b214c2db02",
      "SecurityGroupArn": "arn:aws:ec2:ap-south-1:588989875114:security-group/sg-0985511bb870df183",
      "OwnerId": "588989875114",
      "GroupName": "CentOS 7 -x86_64- - with Updates HVM-2002_01-AutogenByAWSMP-",
      "Description": "This security group was generated by AWS Marketplace and is based on recommended settings for CentOS 7 (x86_64) - with Updates HVM version 2002_01 provided by Centos.org",
      "IpPermissions": [
        {
          "IpProtocol": "tcp",
          "FromPort": 22,
          "ToPort": 22,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-008801ad727d19fb4",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "Tags": [
        {
          "Key": "aws:cloudformation:stack-id",
          "Value": "arn:aws:cloudformation:ap-south-1:588989875114:stack/aws-cloud9-test-6fb4667529e04c7d848977e640987df5/bae844e0-da38-11eb-acd6-02ed63f242ec"
        },
        {
          "Key": "aws:cloudformation:logical-id",
          "Value": "InstanceSecurityGroup"
        },
        {
          "Key": "Name",
          "Value": "aws-cloud9-test-6fb4667529e04c7d848977e640987df5"
        },
        {
          "Key": "aws:cloud9:environment",
          "Value": "6fb4667529e04c7d848977e640987df5"
        },
        {
          "Key": "aws:cloud9:owner",
          "Value": "AIDAYSIUIIOVDIOIEG2ZJ"
        },
        {
          "Key": "aws:cloudformation:stack-name",
          "Value": "aws-cloud9-test-6fb4667529e04c7d848977e640987df5"
        }
      ],
      "VpcId": "vpc-0f01f92b214c2db02",
      "SecurityGroupArn": "arn:aws:ec2:ap-south-1:588989875114:security-group/sg-008801ad727d19fb4",
      "OwnerId": "588989875114",
      "GroupName": "aws-cloud9-test-6fb4667529e04c7d848977e640987df5-InstanceSecurityGroup-11UENA1DXOCY1",
      "Description": "Security group for AWS Cloud9 environment aws-cloud9-test-6fb4667529e04c7d848977e640987df5",
      "IpPermissions": [
        {
          "IpProtocol": "tcp",
          "FromPort": 22,
          "ToPort": 22,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "13.232.67.128/27"
            },
            {
              "CidrIp": "13.232.67.160/27"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-09a50f5ee7ca58ba2",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-0f01f92b214c2db02",
      "SecurityGroupArn": "arn:aws:ec2:ap-south-1:588989875114:security-group/sg-09a50f5ee7ca58ba2",
      "OwnerId": "588989875114",
      "GroupName": "default",
      "Description": "default VPC security group",
      "IpPermissions": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-09a50f5ee7ca58ba2"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-03ff0022f8e89d55d",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-0f01f92b214c2db02",
      "SecurityGroupArn": "arn:aws:ec2:ap-south-1:588989875114:security-group/sg-03ff0022f8e89d55d",
      "OwnerId": "588989875114",
      "GroupName": "AWS-OpsWorks-LB-Server",
      "Description": "AWS OpsWorks load balancer - do not change or delete",
      "IpPermissions": [
        {
          "IpProtocol": "tcp",
          "FromPort": 80,
          "ToPort": 80,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 22,
          "ToPort": 22,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 443,
          "ToPort": 443,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-0103db4f573a4ed4f",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-0f01f92b214c2db02",
      "SecurityGroupArn": "arn:aws:ec2:ap-south-1:588989875114:security-group/sg-0103db4f573a4ed4f",
      "OwnerId": "588989875114",
      "GroupName": "AWS-OpsWorks-Rails-App-Server",
      "Description": "AWS OpsWorks Rails-App server - do not change or delete",
      "IpPermissions": [
        {
          "IpProtocol": "tcp",
          "FromPort": 80,
          "ToPort": 80,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 22,
          "ToPort": 22,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "udp",
          "FromPort": 1,
          "ToPort": 65535,
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-03ff0022f8e89d55d"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-051b8e9a5d46fe530"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 1,
          "ToPort": 65535,
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-03ff0022f8e89d55d"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-051b8e9a5d46fe530"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "icmp",
          "FromPort": -1,
          "ToPort": -1,
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-03ff0022f8e89d55d"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-051b8e9a5d46fe530"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 443,
          "ToPort": 443,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-02bb480e6a9fa354b",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-0f01f92b214c2db02",
      "SecurityGroupArn": "arn:aws:ec2:ap-south-1:588989875114:security-group/sg-02bb480e6a9fa354b",
      "OwnerId": "588989875114",
      "GroupName": "OpenVPN Access Server-2-8-5-AutogenByAWSMP-",
      "Description": "This security group was generated by AWS Marketplace and is based on recommended settings for OpenVPN Access Server version 2.8.5 provided by OpenVPN Inc",
      "IpPermissions": [
        {
          "IpProtocol": "udp",
          "FromPort": 1194,
          "ToPort": 1194,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 22,
          "ToPort": 22,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 945,
          "ToPort": 945,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 943,
          "ToPort": 943,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 443,
          "ToPort": 443,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-05d51aaf81e62637a",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-0f01f92b214c2db02",
      "SecurityGroupArn": "arn:aws:ec2:ap-south-1:588989875114:security-group/sg-05d51aaf81e62637a",
      "OwnerId": "588989875114",
      "GroupName": "AWS-OpsWorks-DB-Master-Server",
      "Description": "AWS OpsWorks database master server - do not change or delete",
      "IpPermissions": [
        {
          "IpProtocol": "udp",
          "FromPort": 1,
          "ToPort": 65535,
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-0103db4f573a4ed4f"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-013a8747ab8a93f18"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-036c6bcb0296565b8"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-051b8e9a5d46fe530"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-05d51aaf81e62637a"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-08f7b525003bb7e20"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-0ccd4ebf312b802a1"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 1,
          "ToPort": 65535,
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-0103db4f573a4ed4f"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-013a8747ab8a93f18"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-036c6bcb0296565b8"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-051b8e9a5d46fe530"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-05d51aaf81e62637a"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-08f7b525003bb7e20"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-0ccd4ebf312b802a1"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "icmp",
          "FromPort": -1,
          "ToPort": -1,
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-0103db4f573a4ed4f"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-013a8747ab8a93f18"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-036c6bcb0296565b8"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-051b8e9a5d46fe530"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-05d51aaf81e62637a"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-08f7b525003bb7e20"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-0ccd4ebf312b802a1"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-013a8747ab8a93f18",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-0f01f92b214c2db02",
      "SecurityGroupArn": "arn:aws:ec2:ap-south-1:588989875114:security-group/sg-013a8747ab8a93f18",
      "OwnerId": "588989875114",
      "GroupName": "AWS-OpsWorks-nodejs-App-Server",
      "Description": "AWS OpsWorks nodejs-App server - do not change or delete",
      "IpPermissions": [
        {
          "IpProtocol": "tcp",
          "FromPort": 80,
          "ToPort": 80,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 22,
          "ToPort": 22,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "udp",
          "FromPort": 1,
          "ToPort": 65535,
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-03ff0022f8e89d55d"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-051b8e9a5d46fe530"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 1,
          "ToPort": 65535,
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-03ff0022f8e89d55d"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-051b8e9a5d46fe530"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "icmp",
          "FromPort": -1,
          "ToPort": -1,
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-03ff0022f8e89d55d"
            },
            {
              "UserId": "588989875114",
              "GroupId": "sg-051b8e9a5d46fe530"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 443,
          "ToPort": 443,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    }
  ],
  "ResponseMetadata": {
    "RequestId": "312f1f48-4967-46d8-9712-75613a8a5f11",
    "HTTPStatusCode": 200,
    "HTTPHeaders": {
      "x-amzn-requestid": "312f1f48-4967-46d8-9712-75613a8a5f11",
      "cache-control": "no-cache, no-store",
      "strict-transport-security": "max-age=31536000; includeSubDomains",
      "vary": "accept-encoding",
      "content-type": "text/xml;charset=UTF-8",
      "transfer-encoding": "chunked",
      "date": "Tue, 03 Jun 2025 14:37:58 GMT",
      "server": "AmazonEC2"
    },
    "RetryAttempts": 0
  }
}
